# clrays

./: .gitignore  Cargo.toml  Program.cs  README.md  Rays.cs  arch-install-deps.sh  bvh.rs  clrays.csproj  clrays.sln  packages.config  roadmap  test.toml
Assets/Kernels/: raytrace.cl  raytrace_debug.cl
Assets/Levels/: test.rle  test2.rle
Assets/Shaders/: game_of_life.fs.glsl  game_of_life.vs.glsl  rays_fs.glsl
FruckEngine/: Constants.cs  FruckEngine.csproj  Game.cs  Window.cs
FruckEngine/Graphics/: FrameBuffer.cs  Mesh.cs  Projection.cs  Raster.cs  Texture.cs
FruckEngine/Helpers/: DefaultModels.cs  DefaultShaders.cs  TextureHelper.cs
FruckEngine/Properties/: AssemblyInfo.cs
FruckEngine/Structs/: Vertex.cs
FruckEngine/Utils/: MathFuncs.cs  MatrixMath.cs
GameOfLife/: GameProcessorCL.cs
Helpers/: OpenCLHelpers.cs  opencl.cs
Properties/: AssemblyInfo.cs
Tracing/: Geo.cs  Info.cs  Kernels.cs  TraceProcessorCL.cs  TraceTex.cs
assets/kernels/: raytrace.cl  raytrace_debug.cl
attempts/: current  current.rs  current2  custom_aabb  custom_aabb.rs  optimizeme.rs  simd  simd.rs
clrays-rs/: Cargo.toml  roadmap
clrays-rs/src/: bin.rs  cl_helpers.rs  info.rs  kernels.rs  lib.rs  misc.rs  scene.rs  state.rs  test_platform.rs  trace_processor.rs  trace_tex.rs  vec3.rs  window.rs
src/: aabb.rs  bin.rs  bvh.rs  bvh_nightly.rs  cl_helpers.rs  config.rs  consts.rs  info.rs  kernels.rs  lib.rs  material.rs  mesh.rs  misc.rs  primitive.rs  scene.rs  state.rs  test_platform.rs  trace_processor.rs  trace_tex.rs  vec3.rs  window.rs
src/cpu/: inter.rs  mod.rs
(+6 files in other folders)
