[package]
name = "clrays-rs"
version = "0.1.0"
authors = ["Cody Bloemhard <cblmhrd@live.nl>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "clrays_rs"
path = "src/lib.rs"

[[bin]]
name = "testbin"
path = "src/bin.rs"

[dependencies]
sdl2 = "0.35.1"
ocl = "0.19.3"
image = "0.23.14"
stopwatch = "0.0.7"
gl = "0.14.0"
crossbeam-utils = "0.8.5"
rand = "0.8.4"
png = "0.17.2"
